--- a/spoonacular_app/css/style.css
+++ b/spoonacular_app/css/style.css
@@ -22,3 +22,13 @@ html {
   font-weight: 400;
   text-rendering: optimizeLegibility;
 }
+
+.row {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+header {
+  background-image: url(img/front_page.jpg);
+  height: 100vh;
+}
