--- a/spoonacular_app/css/style.css
+++ b/spoonacular_app/css/style.css
@@ -108,6 +108,10 @@ section {
   text-align: center;
 }
 
+.section-text-box {
+  height: 100vh;
+}
+
 .btns {
   display: flex;
   flex-direction: row;
@@ -261,7 +265,7 @@ nav h3 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../img/food_img1.jpg);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: 140vh;
   color: #fff;
   text-align: center;
 }
